[package]
name = "rsmt2"
version = "0.9.0"
authors = ["Adrien Champion <adrien.champion@email.com>"]
description = "Wrapper for SMT-LIB 2 compliant SMT solvers."
documentation = "https://docs.rs/rsmt2"
homepage = "https://github.com/kino-mc/rsmt2"
repository = "https://github.com/kino-mc/rsmt2"
readme = "README.md"
categories = ["science"]
keywords = ["SMT", "SAT", "satisfiability", "solver", "SMT-LIB"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "kino-mc/rsmt2" }

[dependencies]
error-chain = "^0"