[package]
name = "rsmt2"
version = "0.14.1"
authors = ["Adrien Champion <adrien.champion@email.com>"]
description = "Wrapper for SMT-LIB 2 compliant SMT solvers."
documentation = "https://docs.rs/rsmt2"
homepage = "https://github.com/kino-mc/rsmt2"
repository = "https://github.com/kino-mc/rsmt2"
readme = "README.md"
categories = ["science"]
keywords = ["SMT", "SAT", "satisfiability", "solver", "SMT-LIB"]
license = "MIT/Apache-2.0"
edition = "2018"

[[example]]
name = "custom_cmd"
test = true
[[example]]
name = "adt"
test = true

[badges]
travis-ci = { repository = "kino-mc/rsmt2", service = "github" }
appveyor = { repository = "kino-mc/rsmt2" }
codecov = { repository = "kino-mc/rsmt2", service = "github" }

[dependencies]
error-chain = "^0"

[dev-dependencies]
clap = "^2"

[features]
default = []
examples = []

[package.metadata.docs.rs]

# Features to pass to Cargo (default: [])
features = ["examples"]